# voice-mcp

./: .gitignore  .mcp.json  .mcp.json.debug  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_IMPLEMENTATION.md  CLAUDE.md  HOTKEY_USAGE.md  PROJECT_STATUS.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: backend-python-architect.md  senior-code-reviewer.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  codeql.yml  coverage.yml  docs.yml  release.yml  security.yml
docs/: api.md  configuration.md  index.md  installation.md  usage.md
examples/: hotkey_demo.py  stt_demo.py  stt_server_demo.py
scripts/: analyze-coverage.sh  check-all.sh  format.sh  lint.sh  test.sh  typecheck.sh  validate-ci.sh
src/: __init__.py
src/voice_mcp/: __init__.py  cli.py  config.py  loading.py  mock_mcp.py  prompts.py  server.py  tools.py
src/voice_mcp/voice/: __init__.py  audio.py  hotkey.py  hotkey_lock.py  stt.py  stt_server.py  text_output.py  tts.py
tests/: Makefile  __init__.py  conftest.py  test_audio.py  test_audio_quality.py  test_cli.py  test_config.py  test_hotkey.py  test_hotkey_lock.py  test_prompts.py  test_server.py  test_stt.py  test_stt_server.py  test_text_output.py  test_tools.py  test_tts.py
